tests/NormalTests/paczka1/fuzzy1/86806028.err
Error in line 12: JaPDAwpc A95 69,2
Error in line 22: XIF S624 13,03
Error in line 13: LoijuVzs5S A360 75,2
Error in line 23: LoijuVzs5S A95 12,1
Error in line 27: W6nB S624 84,1
Error in line 33: LoijuVzs5S A360 4,6
